--- a/style.css
+++ b/style.css
@@ -16,3 +16,13 @@ button{
     border: none;
     border-radius: 4px;
 }
+
+footer{
+    margin-top: 50px;
+    text-align: center;
+}
+
+footer a{
+    color: linen;
+    text-decoration: none;
+}
